--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,17 @@
 {
     "manifest_version": 3,
-    "name": "Transkrypcja spotkań",
+    "name": "SMN: Transkrypcja spotkań",
+    "description": "Transkrypcja i podsumowanie twoich spotkań",
     "version": "1.0",
-    "permissions": ["activeTab", "scripting", "tabs"],
+    "permissions": [
+      "activeTab", 
+      "tabCapture",
+      "offscreen",
+      "scripting",
+      "storage",
+      "desktopCapture",
+      "tabs"
+    ],
     "host_permissions": ["<all_urls>"],
     "background": {
       "service_worker": "background.js"
