--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 .env
+google_cloud_key.json
+server/google_cloud_key.json
+server/uploads/frames/*
+!server/uploads/frames/
+server/uploads/transcription
