--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "fluent-ffmpeg": "^2.1.3",
         "image-hash": "^5.3.2",
         "multer": "^1.4.5-lts.1",
+        "node-localstorage": "^3.0.5",
         "nodemailer": "^6.9.16",
         "postmark": "^4.0.5",
         "tesseract.js": "^6.0.0"
